# audiblelight-dataset-generator

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
.github/: settings.yaml
.github/workflows/: cleanup-images.yaml  docker.yaml  release.yaml  setup-repository.yaml  sync-labels.yaml  type-check.yaml
config/: config.yaml
data/background_noise_detection/: LICENSE.md
scripts/: docker-infer.sh  transform_audio.py
src/: generator.py  utils.py
