[project]
name = "audiblelight-dataset-generator"
version = "0.0.0"
description = "Generate datasets using the AudibleLight library."
readme = "README.md"
requires-python = "==3.12.12"
dependencies = [
    "audiblelight==0.1.1",
    "numpy>=2.0.0,<3.0.0",
    "pandas>=2.2.2,<3.0.0",
    "pyyaml==6.0.2",
    "rlr-audio-propagation==0.0.1",
    "tqdm==4.67.1",
    "uvicorn[standard]==0.32.1",
]

[project.urls]
Repository = "https://github.com/PhilippXXY/audiblelight-dataset-generator"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

# Development / tooling dependencies for uv
[dependency-groups]
dev = [
    "mypy==1.13.0",
    "pytest==8.3.0",
    "ruff==0.8.0",
    "types-PyYAML==6.0.12",
]

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_any_unimported = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
warn_return_any = true
warn_unreachable = true
warn_unused_ignores = true

[tool.ruff]
line-length = 100

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint]
select = [
  "E",    # pycodestyle (spacing, indentation, etc.)
  "F",    # pyflakes (unused imports, undefined names)
  "B",    # flake8-bugbear (common bug patterns)
  "I",    # isort (import order via Ruff)
  "D",    # pydocstyle (docstrings, already configured)
  "PT",   # flake8-pytest-style (pytest best practices)
  "S",    # flake8-bandit (basic security checks)
  "C90",  # mccabe (complexity, long functions)
  "PL",   # pylint-like rules (naming, refactors, misc)
  "FIX", # flake8-fixme (TODO, FIXME, XXX comments)
]
ignore = [
  "D203",  # one-blank-line-before-class (conflicts with D211)
  "D213",  # multi-line summary second line (we prefer on first line)
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.per-file-ignores]
"tests/**/*" = ["S101"]

[tool.pylint.main]
init-hook = "import sys; sys.path.append('src')"